--- a/javascript/for_later/manifest.json
+++ b/javascript/for_later/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "version": "1.0",
-    "name": "Video tracker",
+    "name": "For Later",
     "action": {
         "default_popup": "index.html",
         "default_icon": "icon.png"
