--- a/javascript/for_later/manifest.json
+++ b/javascript/for_later/manifest.json
@@ -2,6 +2,10 @@
     "manifest_version": 3,
     "version": "1.0",
     "name": "For Later",
+    "description": "Saves important pages, for later...",
+    "icons": {
+        "64": "icon.png"
+    },
     "action": {
         "default_popup": "index.html",
         "default_icon": "icon.png"
